_index.scss | fix(remove text-align center

--- a/app/assets/stylesheets/note/_index.scss
+++ b/app/assets/stylesheets/note/_index.scss
@@ -5,7 +5,6 @@
       font-size: 25px;
       font-weight: bold;
       color: #3BC26B;
-      text-align: center;
       text-decoration: underline;
 
       // 長いタイトルを・・・にする
